Updated to use sections, fixed spacing and justification

--- a/styles.css
+++ b/styles.css
@@ -44,15 +44,23 @@ main {
   flex-grow: 1;
   border-radius: 2%;
   margin: 0.3rem 5%;
+  align-items: center;
 }
 
 .content img {
   border-radius: 2%;
+  max-width: 100%;
 }
 
 .content section {
+  display: flex;
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 2rem;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  flex-direction: column;
 }
 
 #innovation-text {
